Flavour section extra space bug fixed

--- a/src/index.css
+++ b/src/index.css
@@ -208,7 +208,8 @@ background: linear-gradient(135deg, #b6957a, #8a5e42, #593724);
     }
 
     .slider-wrapper {
-      @apply lg:h-dvh  min-h-dvh md:min-h-fit w-full mt-0 md:mt-20 xl:mt-0;
+  @apply lg:h-dvh h-full w-fit mt-0;
+
 
       .flavors {
         @apply h-full w-full flex md:flex-row flex-col items-center 2xl:gap-72 lg:gap-52 md:gap-24 gap-7 flex-nowrap;
